added background to form and fixed additing

--- a/style.css
+++ b/style.css
@@ -241,3 +241,26 @@ button {
     border-radius: 10px;
     margin-top: 5px;
 }
+.overlay-modal {
+    opacity: 0.8; 
+    position: fixed; 
+    left: 0; 
+    right: 0; 
+    top: 0; 
+    bottom: 0; 
+    padding: 16px; 
+    background-color: rgba(1, 1, 1, 0.8); 
+    z-index: 100; 
+    overflow: auto; 
+}
+.modal-create {
+    margin: auto;
+    margin-top: auto;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -110px;
+    margin-left: -200px;
+    box-shadow: 0 0 15px 3px #000;
+    z-index: 200;
+}
