drag`n`drop synchronized, stucture was made better

--- a/style.css
+++ b/style.css
@@ -74,6 +74,9 @@ button {
     min-width: 280px;
     height: 100%;
 }
+.board-block__list{
+    min-height: 50px;
+}
 .board-block__title {
     text-align: center;
     color: #000;
